k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  ports:
    - port: 8000
      targetPort: 80
      protocol: TCP
  selector:
    app: hello-world
